# open-to-close-api

./: .dockerignore  .gitignore  .pre-commit-config.yaml  404.html  CONTRIBUTING.md  DOCS_STYLE_GUIDE.md  Dockerfile  FINDINGS_SUMMARY.md  LICENSE  MANIFEST.in  README.Docker.md  README.md  SECURITY.md  STYLE_GUIDE.md  check_actual_field_ids.py  correct_api_demo.py  create_property_with_actual_ids.py  create_property_with_required_fields.py  debug_create_property.py  debug_property_fields.py  dependency_upgrade_analysis.md  detailed_debug.py  docker-compose.yml  env.example  final_property_creation.py  index.html  mkdocs.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py  sitemap.xml  successful_property_creation.py  test_api.py  test_create_property.py  test_property_creation_fixed.py  working_property_demo.py
.github/: README.md  dependabot.yml
README_DOCUMENTATION/: index.html
agents/: example_agent.py  main_agent.py  monitor_agent.py
api-docs/: ENDPOINTS_FIXED.md  README.md  overview.md
api-reference/: index.html
changelog/: index.html
contributing/: index.html
deployment/: index.html
docs/: README_DOCUMENTATION.md  STYLE_GUIDE.md  api-reference.md  changelog.md  contributing.md  index.md  installation.md  property-creation-guide.md  quickstart.md  troubleshooting.md
examples/: create_property_with_clients.py  index.html  simple_property_creation.py
installation/: index.html
javascripts/: extra.js
open_to_close/: __init__.py  agents.py  base_client.py  client.py  contacts.py  exceptions.py  properties.py  property_contacts.py  property_documents.py  property_emails.py  property_notes.py  property_tasks.py  tags.py  teams.py  users.py
open_to_close_api/: __init__.py  agents.py  base_client.py  client.py  contacts.py  exceptions.py  properties.py  property_contacts.py  property_documents.py  property_emails.py  property_notes.py  property_tasks.py  tags.py  teams.py  users.py
quickstart/: index.html
search/: search_index.json
stylesheets/: extra.css
tasks/: endpoint_tasks.md
tests/: INVESTIGATION_TESTS_README.md  test_additional_apis.py  test_all_endpoints_working.py  test_api_integration.py  test_base_client.py  test_contact_roles.py  test_core_apis.py  test_events.py  test_exceptions.py  test_file_roles.py  test_property_apis.py  test_property_emails.py  test_property_field_groups.py  test_property_field_sections.py  test_property_fields.py  test_property_notes.py  test_property_templates.py  test_smoke.py  test_time_zones.py  test_users.py
tests_disabled/: test_agents.py  test_api_integration.py  test_client.py  (+10 more)
(+52 files in other folders)
