[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "open-to-close"
version = "2.1.1"
description = "Python wrapper for the Open To Close API"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "John Perry", email = "john@theperry.group"}
]
keywords = ["api", "wrapper", "open-to-close", "real-estate"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed"
]
requires-python = ">=3.8"
dependencies = [
    "requests>=2.25.0",
    "python-dotenv>=0.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "responses>=0.23.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "isort>=5.12.0",
    "pylint>=2.17.0",
    "bandit>=1.7.0",
    "pre-commit>=3.0.0",
    "types-requests>=2.25.0",
    # Documentation dependencies
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.4.0",
    "mkdocs-include-markdown-plugin>=6.0.0",
    "mkdocs-minify-plugin>=0.7.0",
    "mike>=2.0.0"
]

[project.urls]
"Homepage" = "https://github.com/theperrygroup/open-to-close"
"Bug Reports" = "https://github.com/theperrygroup/open-to-close/issues"
"Source" = "https://github.com/theperrygroup/open-to-close"

[tool.setuptools.packages.find]
include = ["open_to_close*"]
exclude = ["tests*", "tests_disabled*", "site*"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
strict_equality = true

[[tool.mypy.overrides]]
module = ["tests.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-ra -q --strict-markers --cov=open_to_close --cov-report=term-missing --cov-report=html --cov-fail-under=80"
testpaths = ["tests"]
python_files = "test_*.py"

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]

[tool.coverage.report]
exclude_lines = [
    "if TYPE_CHECKING:"
] 